
$Id: changes.txt,v 1.95 2006/08/07 13:03:59 vvd0 Exp $

----
MVDSV v0.20.04-CVS build 24?? (2006.0?.??)
* disconnect <disconn3ct@users.sourceforge.net>
- ZQuake's cmodel.c instead of original sv_model.c

* jhodge <jhodge@users.sourceforge.net>
- new cvar sv_allowlastscores
  0 - disallow connection less command lastscores
  1 - allow connection less command lastscores
  default: 1
- bugfix from 0.1727: possibility to run master_rcon commands with normal rcon

* VVD <vvd0@users.sourceforge.net>
- improved build number calculation
- bugfix: "99% downloaded" - sometimes after downloading client don't rename temporary file to
  real filename and don't hide download bar - show 99% (EXPERIMENTAL)
(Thanks to Renzo)
- bugfix from 0.1726: on *nix '-u <UID>' didn't set uid
(Thanks to mli)
- improved -u and -g (setuid/setgid) support

* qqshka <qqshka@users.sourceforge.net>
- extending "/addip" command, adding expiration time, and "type" of ipfilter.
  Now syntax looks like: /addip <ip> [type] [[+]time]
  Type may be: "ban" or "safe", "ban" is obvious while "safe" will be described below.
  Time param better describe via examples:
	"/addip 127.0.0.1 ban +10" will ban 127.0.0.1 for 10 seconds from current time
	"/addip 127.0.0.1 ban 1234567" will ban 127.0.0.1 for some seconds since 00:00:00 GMT, January 1, 1970
  Second variant is not human frienly, and developed to be used in listip.cfg, which is generated after
  issuing "/writeip". Oh, and zero time ( 0s or 0m etc) treated as unexpired time value.
- adding server side bans.
  First of all u must be an realAdmin for use serverside bans, also if mod have self ban commands (like ktpro),
  then mod commands will be used. Currently server side bans can be used only for KTX mod, but adding such support
  to any mod is just few lines of code.

	"/cmd ban <uid/nick> <time s m h d> [reason]" timed ban by uid/nick.
	Example: "/cmd ban qqshka 10s testban" will ban user with nick qqshka for 10 seconds, and print reason as "testban".